--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Bouncy</title>
 	<link rel="icon" href="favicon.png">
+	<link rel="stylesheet" href="node_modules/slick-carousel/slick/slick.css">
+	<link rel="stylesheet" href="node_modules/slick-carousel/slick/slick-theme.css">
 	<link rel="stylesheet" href="assets/styles/main.css">
-	<link rel="stylesheet" href="">
-	<link rel="stylesheet" href="">
+
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -16,53 +17,270 @@
 <header class="ba-header">
 	<section class="ba-container">
 		<header>
-			<a class="ba-logo" href="#"><img src="assets/img/logo.png" alt="logo"></a>
+			<a class="ba-logo" href="#"><img src="assets/img/logo.svg" alt="logo"></a>
 			<nav class="ba-navigation">
 				<ul class="ba-menu">
-					<li class="ba-menu__item"><a class="ba-menu__link" href="#">HELLO</a></li>
-					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-services"> SERVICES</a></li>
-					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-about"> ABOUTUS</a></li>
-					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-works"> OUR WORK</a></li>
-					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-footer"> CONTACT US</a></li>
+					<li class="ba-menu__item"><a class="ba-menu__link" href="#">Hello</a></li>
+					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-portfolio">Portfolio</a></li>
+					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-team">Team</a></li>
+					<li class="ba-menu__item"><a class="ba-menu__link" href="#ba-contact-us">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
 		<section class="ba-banner">
-			<h1 class="ba-banner__title">we’re creative agency</h1>
-			<hr class="ba-horizontal-line">
+			<h1 class="ba-banner__title">we are code cafe</h1>
 			<p class="ba-banner__description">
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br>
-				Aenean commodo ligula eget dolor. Aenean massa.
+				At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis<br>
+				praesentium
 			</p>
 		</section>
 		<footer>
-			<a class="ba-scroll" href="#ba-services"></a>
+			<a class="ba-scroll" href="#ba-portfolio"></a>
 		</footer>
 	</section>
 </header>
 <main>
-	<section id="">
+	<section id="ba-portfolio" class="ba-portfolio">
+		<section class="ba-container">
+			<h1 class="ba-portfolio__title">the portfolio</h1>
+			<p class="ba-portfolio__description">
+				At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
+				blanditiis praesentium
+			</p>
 
+			<section class="ba-works">
+				<section class="ba-filter">
+					<a class="ba-active ba-filter-btn" href="#" id="btn-all-projects" data-filter='*'>All Works</a>
+					<a class="ba-filter-btn" href="#" id="btn-print" data-filter='.ba-print'>Print</a>
+					<a class="ba-filter-btn" href="#" id="btn-branding" data-filter='.ba-branding'>Branding</a>
+					<a class="ba-filter-btn" href="#" id="btn-web" data-filter='.ba-web'>Web</a>
+					<a class="ba-filter-btn" href="#" id="btn-html" data-filter='.ba-html'>HTML</a>
+				</section>
+				<section class="ba-grid">
+					<div class="ba-grid-item ba-print">
+						<img src="assets/img/1.jpg">
+					</div>
+					<div class="ba-grid-item ba-branding">
+						<img src="assets/img/2.jpg">
+					</div>
+					<div class="ba-grid-item ba-web">
+						<img src="assets/img/3.jpg">
+					</div>
+					<div class="ba-grid-item ba-html">
+						<img src="assets/img/4.jpg">
+					</div>
+					<div class="ba-grid-item ba-print">
+						<img src="assets/img/5.jpg">
+					</div>
+					<div class="ba-grid-item ba-branding">
+						<img src="assets/img/6.jpg">
+					</div>
+					<div class="ba-grid-item ba-web">
+						<img src="assets/img/7.jpg">
+					</div>
+					<div class="ba-grid-item ba-html">
+						<img src="assets/img/8.jpg">
+					</div>
+					<div class="ba-grid-item ba-print">
+						<img src="assets/img/9.jpg">
+					</div>
+					<div class="ba-grid-item ba-branding">
+						<img src="assets/img/10.jpg">
+					</div>
+					<div class="ba-grid-item ba-web">
+						<img src="assets/img/11.jpg">
+					</div>
+					<div class="ba-grid-item ba-html">
+						<img src="assets/img/12.jpg">
+					</div>
+				</section>
+			</section>
+		</section>
 	</section>
-	<section id="">
+	<section id="ba-team" class="ba-team">
+		<section class="ba-container">
+			<h1 class="ba-team__title">the team</h1>
+			<p class="ba-team__description">
+				At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
+				blanditiis praesentium
+			</p>
 
+			<section class="ba-slider">
+				<div class="ba-team-slider">
+					<div class="ba-team-slide">
+						<div class="ba-team-slide__photo">
+							<img src="assets/img/team-photo.jpg" alt="team-photo">
+						</div>
+						<div class="ba-team-slide__text">
+							<h3 class="ba-team__title">Abdullah Noman</h3>
+							<h4 class="ba-team__subtitle">creative director, code cafe</h4>
+							<p class="ba-team__text">
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+							</p>
+						</div>
+					</div>
+					<div class="ba-team-slide">
+						<div class="ba-team-slide__photo">
+							<img src="assets/img/team-photo.jpg" alt="team-photo">
+						</div>
+						<div class="ba-team-slide__text">
+							<h3 class="ba-team__title">Abdullah Noman</h3>
+							<h4 class="ba-team__subtitle">creative director, code cafe</h4>
+							<p class="ba-team__text">
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+							</p>
+						</div>
+					</div>
+					<div class="ba-team-slide">
+						<div class="ba-team-slide__photo">
+							<img src="assets/img/team-photo.jpg" alt="team-photo">
+						</div>
+						<div class="ba-team-slide__text">
+							<h3 class="ba-team__title">Abdullah Noman</h3>
+							<h4 class="ba-team__subtitle">creative director, code cafe</h4>
+							<p class="ba-team__text">
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+								At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</section>
+		</section>
 	</section>
-	<section id="">
-
+	<section id="ba-contact" class="ba-contact">
+		<div class="ba-container">
+			<h3 class="ba-contact__title">Already Loved Us? Let’s talk!</h3>
+			<a class="ba-contact__link">Contact Us</a>
+		</div>
 	</section>
-	<section id="">
+	<section id="ba-testimonials" class="ba-testimonials">
+		<div class="ba-container">
+			<h1 class="ba-testimonials__title">Testimonials</h1>
+			<p class="ba-testimonials__description">
+				At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
+				blanditiis praesentium
+			</p>
+			<div class="ba-testimonials-slider">
+				<div class="ba-testimonials-slide">
+					<div class="ba-testimonials-slide__photo">
+						<img src="assets/img/testimonilas-photo.jpg" alt="team-photo">
+					</div>
+					<div class="ba-testimonials-slide__text">
+						<p class="ba-testimonials-slide__text">
+							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+							voluptatum
+							deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
+							non
+							provident, similique sunt in culpa qui officia deserunt mollitia.
+						</p>
+						<h3 class="ba-testimonials-slide__title">partho</h3>
+						<h4 class="ba-testimonials-slide__subtitle">founder, artways bd</h4>
+					</div>
+				</div>
+				<div class="ba-testimonials-slide">
+					<div class="ba-testimonials-slide__photo">
+						<img src="assets/img/testimonilas-photo.jpg" alt="team-photo">
+					</div>
+					<div class="ba-testimonials-slide__text">
+						<p class="ba-testimonials-slide__text">
+							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+							voluptatum
+							deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
+							non
+							provident, similique sunt in culpa qui officia deserunt mollitia.
+						</p>
+						<h3 class="ba-testimonials-slide__title">partho</h3>
+						<h4 class="ba-testimonials-slide__subtitle">founder, artways bd</h4>
+					</div>
+				</div>
+				<div class="ba-testimonials-slide">
+					<div class="ba-testimonials-slide__photo">
+						<img src="assets/img/testimonilas-photo.jpg" alt="team-photo">
+					</div>
+					<div class="ba-testimonials-slide__text">
+						<p class="ba-testimonials-slide__text">
+							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+							voluptatum
+							deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
+							non
+							provident, similique sunt in culpa qui officia deserunt mollitia.
+						</p>
+						<h3 class="ba-testimonials-slide__title">partho</h3>
+						<h4 class="ba-testimonials-slide__subtitle">founder, artways bd</h4>
+					</div>
+				</div>
 
+			</div>
+		</div>
 	</section>
-	<section id="">
+	<section id="ba-contact-us" class="ba-contact-us">
+		<div class="ba-container">
+			<h1 class="ba-contact-us__title">Contact Us</h1>
+			<p class="ba-contact-us__description">
+				At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
+				blanditiis praesentium
+			</p>
+		</div>
+		<div id="map">
+			<div class="ba-infoText">
 
+			</div>
+		</div>
 	</section>
 </main>
-<footer>
-
+<footer class="ba-footer">
+	<img src="assets/img/footer-logo.svg" alt="">
+	<h4 class="ba-footer__title">Copyright 2015. All rights Reserved</h4>
+	<ul class="ba-social-icon">
+		<li class="ba-social-icon__item">
+			<a class="ba-social-icon__link" href="">
+				<img class="ba-social-icon__img" src="assets/img/facebook.svg" alt="twitter-icon">
+			</a>
+		</li>
+		<li class="ba-social-icon__item">
+			<a class="ba-social-icon__link" href="">
+				<img class="ba-social-icon__img" src="assets/img/twitter.svg" alt="facebook-icon">
+			</a>
+		</li>
+		<li class="ba-social-icon__item">
+			<a class="ba-social-icon__link" href="">
+				<img class="ba-social-icon__img" src="assets/img/linkedin.svg" alt="linkedin-icon">
+			</a>
+		</li>
+		<li class="ba-social-icon__item">
+			<a class="ba-social-icon__link" href="">
+				<img class="ba-social-icon__img" src="assets/img/instagramm.svg" alt="vk-icon">
+			</a>
+		</li>
+		<li class="ba-social-icon__item">
+			<a class="ba-social-icon__link" href="">
+				<img class="ba-social-icon__img" src="assets/img/vimeo.svg" alt="behance-icon">
+			</a>
+		</li>
+	</ul>
 </footer>
-<script></script>
-<script></script>
-<script></script>
-<script></script>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/isotope-layout/dist/isotope.pkgd.min.js"></script>
+<script src="node_modules/slick-carousel/slick/slick.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtz4HPqMUXCYdFMWAYrpYoD4OXBijWwFY&callback=initMap"
+		async defer></script>
+<script src="assets/scripts/isotope/js.js"></script>
+<script src="assets/scripts/slider/slider-team.js"></script>
+<script src="assets/scripts/slider/slider-testimonials.js"></script>
+<script src="assets/scripts/scroll/scroll.js"></script>
+<script src="assets/scripts/map/map.js"></script>
 </body>
 </html>
