--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
 </footer>
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/isotope-layout/dist/isotope.pkgd.min.js"></script>
-<script src="node_modules/slick-carousel/slick/slick.min.js"></script>
+<!--<script src="node_modules/slick-carousel/slick/slick.min.js"></script>-->
+<script src="assets/scripts/slider/slick.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtz4HPqMUXCYdFMWAYrpYoD4OXBijWwFY&callback=initMap"
 		async defer></script>
 <script src="assets/scripts/isotope/js.js"></script>
