--- a/index.html
+++ b/index.html
@@ -272,8 +272,10 @@
 		</li>
 	</ul>
 </footer>
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/isotope-layout/dist/isotope.pkgd.min.js"></script>
+<!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
+<script src="assets/scripts/jquery.min.js"></script>
+<!--<script src="node_modules/isotope-layout/dist/isotope.pkgd.min.js"></script>-->
+<script src="assets/scripts/isotope.pkgd.min.js"></script>
 <!--<script src="node_modules/slick-carousel/slick/slick.min.js"></script>-->
 <script src="assets/scripts/slider/slick.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtz4HPqMUXCYdFMWAYrpYoD4OXBijWwFY&callback=initMap"
