--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Bouncy</title>
 	<link rel="icon" href="favicon.png">
-	<link rel="stylesheet" href="node_modules/slick-carousel/slick/slick.css">
-	<link rel="stylesheet" href="node_modules/slick-carousel/slick/slick-theme.css">
+	<!--<link rel="stylesheet" href="node_modules/slick-carousel/slick/slick.css">-->
+	<!--<link rel="stylesheet" href="node_modules/slick-carousel/slick/slick-theme.css">-->
 	<link rel="stylesheet" href="assets/styles/main.css">
+	<link rel="stylesheet" href="assets/styles/slick.css">
+	<link rel="stylesheet" href="assets/styles/slick-theme.css">
 
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
